Fix z-index problem in page-details

--- a/src/app/components/pages/page-details.scss
+++ b/src/app/components/pages/page-details.scss
@@ -2,8 +2,6 @@
 
 .modul-page-details {
     background-color: $m-color--white;
-    position: relative;
-    z-index: 3;
 
     .m-nav-bar {
         margin: 0 auto;
